fix spacing

--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@
 }
 
 .header {
-    margin: 3% 10% 0;
+    margin: 3% 10% 1% 10%;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+
 }
 
 .nav {
